# tinyrcon

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  TinyRcon.sln  TinyRconGUI.aps  TinyRconGUI.rc  TinyRconGUI.sln  TinyRconGUI.vcxproj  TinyRconGUI.vcxproj.filters  TinyRconPrivateServerAndClientApplications.sln  resource.h
TinyRconClient/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TinyRconClient.rc  TinyRconClient.vcxproj  TinyRconClient.vcxproj.filters  resource.h
TinyRconClient/config/: tinyrcon.json
TinyRconClient/data/: banned_cities.txt  banned_names.txt  bans.txt  ip_range_bans.txt  protected_cities.txt  protected_ip_addresses.txt  reported_players.txt  user.txt
TinyRconClient/include/: autoupdate.h  bitmap_image_handler.h  connection_manager.h  connection_manager_for_messages.h  connection_manager_for_rcon_messages.h  framework.h  game_server.h  image.h  internet_handle.h  json_parser.hpp  md5.h  player.h  resource.h  simple_grid.h  sqlite3.h  sqlite3ext.h  stack_trace_element.h  stats.h  stl_helper_functions.hpp  tiny_rcon_client_application.h  tiny_rcon_client_sqlite_database.h  tiny_rcon_client_user.h  tiny_rcon_utility_classes.h  tiny_rcon_utility_data_types.h  tiny_rcon_utility_functions.h
TinyRconClient/include/detail/: stl_helper_functions_impl.hpp
TinyRconClient/src/: ImageEx.cpp  autoupdate.cpp  connection_manager.cpp  connection_manager_for_messages.cpp  connection_manager_for_rcon_messages.cpp  image.cpp  md5.cpp  simple_grid.cpp  stats.cpp  tiny_rcon_client.cpp  tiny_rcon_client_sqlite_database.cpp  tiny_rcon_utility_functions.cpp
TinyRconPrivateClient/: CMakeLists.txt  README.md  TinyRconPrivateClient.rc  TinyRconPrivateClient.vcxproj  TinyRconPrivateClient.vcxproj.filters  resource.h
TinyRconPrivateClient_v2/: .clang-format  CMakeLists.txt  TinyRconPrivateClient_v2.rc  TinyRconPrivateClient_v2.vcxproj  TinyRconPrivateClient_v2.vcxproj.filters  resource.h
TinyRconPrivateServer/: CMakeLists.txt  TinyRconPrivateServer.rc  TinyRconPrivateServer.vcxproj  TinyRconPrivateServer.vcxproj.filters  resource.h
TinyRconServer/: CMakeLists.txt  TinyRconServer.aps  TinyRconServer.rc  TinyRconServer.vcxproj  TinyRconServer.vcxproj.filters  resource.h
config/: tinyrcon.json
data/: banned_cities.txt  banned_countries.txt  bans.txt  tempbans.txt  user.txt
include/: Resource.h  autoupdate.h  connection_manager.h  framework.h  game_server.h  internet_handle.h  json_parser.hpp  simpleGrid.h  simple_grid.h  stl_helper_functions.hpp  tiny_cod2_rcon_client_application.h  tiny_rcon_utility_functions.h
src/: autoupdate.cpp  connection_manager.cpp  md5.cpp  simpleGrid.cpp  simple_grid.cpp  tiny_rcon.cpp  tiny_rcon_utility_functions.cpp
(+118 files in other folders)
